--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 16 00:22:02 PDT 2018
-sdk.dir=C\:\\Users\\Andy\\AppData\\Local\\Android\\Sdk
+#Thu Oct 18 12:05:06 PDT 2018
+sdk.dir=/Users/Andy/Library/Android/sdk
