--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 20 17:17:53 PDT 2018
-sdk.dir=/Users/Andy/Library/Android/sdk
+#Sun Oct 21 12:02:38 PDT 2018
+sdk.dir=C\:\\Users\\wu zhen\\AppData\\Local\\Android\\Sdk
