--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,10 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/CodeStyles
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
