--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,12 @@
         </activity>
         <activity
             android:name=".AboutActivity"
-            android:label="@string/title_activity_about_page"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddingFoodActivity"
-            android:label=""></activity>
-        <activity android:name=".ResultActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ResultActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
