--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddingFoodActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+
         <activity android:name=".ResultActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
