--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,3 +30,7 @@ dependencies {
 dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
