--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,3 +39,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
 apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
