--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hca127.greenfood">
 
+    <uses-sdk android:minSdkVersion="11"
+        android:targetSdkVersion="21"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +31,7 @@
             android:name=".SuggestionActivity"
             android:label="@string/title_activity_suggestion"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
     </application>
 
 </manifest>
