a bunch of layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,29 +9,49 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".AddingFoodActivity"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".ResultActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".SuggestionActivity"
+            android:label="@string/title_activity_suggestion"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".AboutActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ResultActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".SuggestionActivity"
-            android:label="@string/title_activity_suggestion"
+            android:name=".SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity
-            android:name=".LoginActivity"
+            android:name=".EditProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
+            android:name=".CommunityActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
     </application>
-
 </manifest>
