--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,3 +44,23 @@ apply plugin: 'com.google.gms.google-services'
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
+
+dependencies {
+    implementation 'com.android.support:support-v4:28.+'
+}
+
+dependencies {
+    implementation 'com.android.support:support-v4:28.+'
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+}
