--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,4 +57,8 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
+    <meta-data
+        android:name="com.google.firebase.auth.API_KEY"
+        android:value="AIzaSyDMdwjKlgI-I73UZ6_rQ0BwRBdi6bOjSqE" />
+
 </manifest>
