--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,3 +64,7 @@ dependencies {
 dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.1'
 }
+
+dependencies {
+    implementation 'com.android.support:support-v4:28.+'
+}
