--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,6 @@ dependencies {
 }
 apply plugin: 'com.google.gms.google-services'
 
+dependencies {
+    implementation 'com.android.support:support-v4:28.+'
+}
