finished share photo to facebook and add a hashtag, try to add the number of the suggestion on the hashtag

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <provider
-            android:authorities="com.facebook.app.FacebookContentProvider{337483050352224}"
+            android:authorities="com.facebook.app.FacebookContentProvider337483050352224"
             android:name="com.facebook.FacebookContentProvider"
             android:exported="true"/>
     </application>
